# multiObjectiveController

./: CMakeLists.txt  license-txt
config/: collision_one.json  collision_one_robot_two.json  impact_one.json  multiObjectiveControllerConfig.cmake.in
examples/: CMakeLists.txt  collisionExampleOne.cpp  impactExampleOne.cpp  simpleWidget.hpp  simpleWorldNodeOne.hpp
impactExampleOne/: CMakeLists.txt  main.cpp  simpleEventHandler.hpp  simpleWidget.hpp  simpleWorldNodeOne.hpp
include/collision/: collisionManager.hpp
include/controllers/: gravityCompensationController.hpp  manipulatorQpController.hpp  metaController.hpp
include/jointControllers/: metaJointController.hpp
include/manipulatorConstraints/: jointAccelerationLimitConstraint.hpp  jointPositionLimitConstraint.hpp  jointPositionUpperLimitConstraint.hpp  jointTorqueLimitConstraint.hpp  jointVelocityLimitConstraint.hpp
include/manipulatorTasks/: collisionAvoidanceTask.hpp  linearVelocityTask.hpp  manipulatorQpObj.hpp  metaManipulatorTask.hpp  motionTask.hpp  orientationTask.hpp  positionTask.hpp
include/utils/: collisionPairVisual.hpp  utils.hpp
src/: collisionAvoidanceTask.cpp  collisionManager.cpp  collisionPairVisual.cpp  gravityCompensationController.cpp  jointAccelerationLimitConstraint.cpp  jointPositionLimitConstraint.cpp  jointTorqueLimitConstraint.cpp  jointVelocityLimitConstraint.cpp  linearVelocityTask.cpp  manipulatorQpController.cpp  manipulatorQpObj.cpp  metaController.cpp  metaJointController.cpp  motionTask.cpp  orientationTask.cpp  positionTask.cpp
